[gd_scene load_steps=2 format=3 uid="uid://bvxlx8fn8n0y4"]

[ext_resource type="Script" path="res://Settings/Settings.gd" id="1_iq1v3"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iq1v3")

[node name="ResolutionOptBtn" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 1300.0
offset_top = 250.0
offset_right = 1800.0
offset_bottom = 350.0
theme_override_font_sizes/font_size = 36
alignment = 1
item_count = 3
popup/item_0/text = "1280x720"
popup/item_1/text = "1920x1080"
popup/item_1/id = 1
popup/item_2/text = "2560x1440"
popup/item_2/id = 2

[node name="ResolutionLbl" type="Label" parent="."]
layout_mode = 0
offset_left = 1000.0
offset_top = 250.0
offset_right = 1250.0
offset_bottom = 350.0
theme_override_font_sizes/font_size = 36
text = "Resolution"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackBtn" type="Button" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 50.0
offset_right = 350.0
offset_bottom = 150.0
theme_override_font_sizes/font_size = 36
text = "Back"

[node name="AdditionalBtn" type="Button" parent="."]
layout_mode = 0
offset_left = 1350.0
offset_top = 934.0
offset_right = 1750.0
offset_bottom = 1034.0
theme_override_font_sizes/font_size = 36
text = "Additional Settings"

[node name="ResolutionOptBtn2" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 1300.0
offset_top = 525.0
offset_right = 1800.0
offset_bottom = 625.0
item_count = 1

[node name="FrametimeOptBtn" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 1300.0
offset_top = 387.5
offset_right = 1800.0
offset_bottom = 487.5
item_count = 5
popup/item_0/text = "30"
popup/item_1/text = "60"
popup/item_1/id = 1
popup/item_2/text = "75"
popup/item_2/id = 2
popup/item_3/text = "120"
popup/item_3/id = 3
popup/item_4/text = "144"
popup/item_4/id = 4

[node name="V-SyncLbl" type="Label" parent="."]
layout_mode = 0
offset_left = 1000.0
offset_top = 674.0
offset_right = 1250.0
offset_bottom = 774.0
theme_override_font_sizes/font_size = 36
text = "V-Sync"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HZLbl" type="Label" parent="."]
layout_mode = 0
offset_left = 1000.0
offset_top = 525.0
offset_right = 1250.0
offset_bottom = 625.0
theme_override_font_sizes/font_size = 36
text = "Resolution"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FrametimeLbl" type="Label" parent="."]
layout_mode = 0
offset_left = 1000.0
offset_top = 387.5
offset_right = 1250.0
offset_bottom = 487.5
theme_override_font_sizes/font_size = 36
text = "Frametime"
horizontal_alignment = 1
vertical_alignment = 1

[node name="V-SyncCB" type="CheckBox" parent="."]
layout_mode = 0
offset_left = 1307.0
offset_top = 671.0
offset_right = 1332.0
offset_bottom = 696.0
scale = Vector2(4, 4)

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 353.0
offset_top = 934.0
offset_right = 953.0
offset_bottom = 1034.0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 60.0
offset_top = 934.0
offset_right = 310.0
offset_bottom = 1034.0
theme_override_font_sizes/font_size = 36
text = "Catalog path:"
horizontal_alignment = 1
vertical_alignment = 1
